# quick-notes

./: .gitignore  BUGFIXES.md  BUILD.md  LICENSE  NoteCommands.cs  PRIVACY.md  QuickNotes.sln  README.md  TESTING.md  WINGET-SETUP.md  build-bundle.ps1  bundle_mapping.txt  package.json
.github/workflows/: build.yml  release-extension.yml  update-winget.yml
QuickNotes/: NoteCommands.cs  Package.appxmanifest  Program.cs  QuickNotes.cs  QuickNotes.csproj  QuickNotesCommandsProvider.cs  SettingsService.cs  app.manifest  build-exe.ps1  bundle_mapping.txt  setup-arm64.iss  setup-template.iss  setup-x64.iss
QuickNotes/BundleArtifacts/: arm64.txt  x64.txt
QuickNotes/Pages/: EditorConfigurationPage.cs  OpenExistingNotesPage.cs  QuickNotesPage.cs  SettingsPage.cs
QuickNotes/Properties/: launchSettings.json
QuickNotes/msix_contents/: AppxBlockMap.xml  AppxManifest.xml  QuickNotes.deps.json  QuickNotes.runtimeconfig.json  resources.pri
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
